--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -35,3 +35,11 @@ h1 {
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 }
+
+#dataframe {
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	width: 600px;
+	height: 600px;
+}
