--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -14,10 +14,10 @@
 			<div id="admin-options">
 				<h3>Manage:</h3>
 				<ul>
-					<li><a href="students.html">Students</a></li>
-					<li><a href="staff.html">Staff</a></li>
-					<li><a href="courses.html">Courses</a></li>
-					<li><a href="majors.html">Majors</a></li>
+					<li><a href="students">Students</a></li>
+					<li><a href="staff">Staff</a></li>
+					<li><a href="courses">Courses</a></li>
+					<li><a href="majors">Majors</a></li>
 				</ul>
 			</div>
 		</div>
