--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="wrapper">
 		<header>
-			<h1><a href="admin">Admin</a> / Studenti</h1>
+			<h1><a href="admin">Admin</a> / Predavaci</h1>
 			<div id="user">
 				<p>Ime Prezime</p>
 				<img src="../images/user-img.bmp" id="user-img">
