--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -26,6 +26,7 @@
 						<label for="date_of_birth">Datum rodjenja:</label>
 						<select name="date_of_birth" onchange="this.form.submit()">
 							<option>all</option>
+
 						</select>
 					</div>
 
@@ -33,6 +34,8 @@
 						<label for="city">Grad:</label>
 						<select type="text" name="city" onchange="this.form.submit()">
 							<option>all</option>
+							<option>Prvogradic</option>
+							<option>Prvogradic+Drugogradic</option>
 						</select>
 					</div>
 
@@ -45,8 +48,10 @@
 
 					<div class="form-element">
 						<label for="order_by">Redosled:</label>
-						<select type="text" name="order_by" value="birthyear-asc" onchange="this.form.submit()">
-							<option>birthyear-asc</option>
+						<select type="text" name="order_by" onchange="this.form.submit()">
+							<option value="birthyear-asc">birthyear-asc</option>
+							<option value="first_name-asc">Ime rastuce</option>
+							<option value="last_name-asc">Prezime rastuce</option>
 						</select>
 					</div>
 					
