--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,11 +7,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600,800' rel='stylesheet' type='text/css'>
+
+    <script type="text/javascript" language="Javascript" src="../static/js/login.js" th:src="@{/js/login.js}"></script>
 </head>
 <body>
 	<div id="wrapper">
 		<div id="login-wrapper">
-			<form action="/login_req" id="login">
+			<form action="/login_req" id="login" target="loginframe">
 				<h2> Log-in: </h2>
 				<br>
 	            <label>Username:</label>
@@ -19,10 +21,12 @@
 	            <br>
 	            <label>Password:</label>
 	            <input type="password" id="password" name="password" value="" placeholder="Password..." minlength="8"><br><br>
+	            <p id="badlogin">Incorrect username or password.</p>
 	            <input type="submit" value="Submit" class="submit">
 	            <input type="reset" value="Reset" class="reset">
 			</form>
 		</div>
+		<iframe src="" name="loginframe" id="loginframe" onload="redirect();"></iframe>
 	</div>
 </body>
 </html>
