Added admin option to delete row from data, and functionality to get user index/id from cookie.

--- a/src/main/resources/static/css/data-style.css
+++ b/src/main/resources/static/css/data-style.css
@@ -192,3 +192,19 @@ select:hover {
 #checkboxes label:hover {
   background-color: #1e90ff;
 }
+
+#dataframe {
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	right: 0px;
+    bottom: 0px;
+}
+
+#sendframe {
+	position: absolute;
+	width: 400px;
+	height: 400px;
+	left: 0px;
+    bottom: 0px;
+}
