--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -94,7 +94,8 @@
 			</table>
 		</div>
 
-		 <iframe src="" name="dataframe" id="dataframe" onload="fillTable()"></iframe> 
+		<iframe src="" name="sendframe" id="sendframe"></iframe>
+		<iframe src="" name="dataframe" id="dataframe" onload="fillTable()"></iframe>
 	</div>
 </body>
 </html>
