--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -34,4 +34,6 @@ h1 {
 	background-image: url("../images/lowpoly.png");
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
+
+	position: relative;
 }
