--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@
 	--color-darker: #3c3c5c; 
 	--color-light: #4F518C;
 	--color-highlight: #907AD6;
-	--color-highlight2: #DABFFF;
+	--color-highlight2: #c9baff;
 	--color-text: #EDE0FF;
 	--color-header: purple;
 }
