--- a/src/main/resources/static/css/data-style.css
+++ b/src/main/resources/static/css/data-style.css
@@ -3,37 +3,6 @@
 	--select-size: 30px;
 }
 
-header {
-	background-color: var(--color-dark);
-	width: 100%;
-	height: 70px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: flex-start;
-
-	position: relative;
-}
-
-header > * {
-	padding: 15px;
-}
-
-#user {
-	position: absolute;
-	right: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-}
-
-#user-img {
-	padding: 10px;
-	border-radius: 50%;
-	width: 40px;
-	height: 40px;
-}
-
 #content {
 	position: absolute;
 	left: 50px;
@@ -86,6 +55,10 @@ td {
 tr:hover>td {
 	cursor: pointer;
 	background-color: var(--color-header);
+}
+
+tr>* {
+	padding-left: 15px;
 }
 
 select {
@@ -182,12 +155,11 @@ input {
 .dd-options {
 	position: absolute;
 	top: 0px;
-	left: 0px;
+	left: -5px;
 
 	min-width: 100%;
-	width: auto;
 	height: auto;
-	background-color: none;
+	background-color: var(--color-highlight2);
 	display: none;
 	padding: 0px;
 	margin: 0px;
@@ -204,17 +176,19 @@ input {
 }
 
 .dd-options>*{
-	width: 94.5%;
+	min-width: 96.5% !important;
 	height: 15px;
 	background-color: var(--color-highlight2);
 	color: var(--color-darker);
 	margin: 0px;
 	padding: 4px;
 	flex-grow: 1;
+	overflow-wrap: normal;
+	z-index: 9;
 }
 
 .dd-options>*>*:first-child {
-	width: 100%;
+	width: 100% !important;
 	color: var(--color-darker);
 }
 
@@ -340,3 +314,44 @@ button {
     bottom: 0px;
     visibility: hidden;
 }
+
+.button-delete {
+	visibility: hidden;
+	position: absolute;
+	right: 25px;
+	font-size: 95%;
+
+	padding: 2px 8px 2px 8px;
+
+	color: var(--color-darker);
+	border-radius: 10px;
+	border-style: solid;
+	border-width: 1px;
+	background-color: var(--color-highlight2);
+	border-color: var(--color-highlight);
+
+	box-shadow: 0px 0px 3px black;
+}
+
+.button-delete:hover {
+	cursor: pointer;
+	color: var(--color-text);
+	background-color: var(--color-dark);
+	border-color: var(--color-darker);
+}
+
+#data>tr:hover>.button-delete {
+	visibility: visible;
+}
+
+.no-auto-submit>input {
+	width: 120%;
+	
+	background-color: var(--color-darker);
+	border: inset;
+	border-width: 2px;
+	border-radius: 10px;
+
+	float:right;
+}
+
