--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,3 +37,76 @@ h1 {
 
 	position: relative;
 }
+
+header {
+	background-color: var(--color-dark);
+	width: 100%;
+	height: 70px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+
+	position: relative;
+}
+
+header > * {
+	padding: 15px;
+}
+
+#user-img {
+	padding: 10px;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px;
+}
+
+#user {
+	position: absolute;
+	top: 9px;
+	right: 10px;
+	width: 170px;
+	height: 25px;
+	border-radius: 30px 30px 0px 0px;
+
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+#user:hover {
+	background-color: var(--color-darker);
+}
+
+#user-options {
+	display: none;
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+	margin-bottom: -70px;
+	height: 70px;
+	width: 200px;
+	z-index: 10;
+	background-color: var(--color-darker);
+	border-radius: 0 0 25px 25px;
+	overflow: hidden;
+}
+
+#user:hover>#user-options {
+	display: block;
+}
+
+#user-options>* {
+	width: 100%;
+	height: 35px;
+	padding: 0px;
+
+	background-color: inherit;
+	border-style: none;
+	border-radius: 0px;
+}
+
+#user-options>*:hover {
+	background-color: var(--color-dark);
+	cursor: pointer;
+}
