--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,10 +17,10 @@
 				<h2> Log-in: </h2>
 				<br>
 	            <label>Username:</label>
-	            <input type="text" id="username" name="username" value="" placeholder="Username..."><br>
+	            <input type="text" id="username" name="username" value="" placeholder="Username..." maxlength="19"><br>
 	            <br>
 	            <label>Password:</label>
-	            <input type="password" id="password" name="password" value="" placeholder="Password..." minlength="8"><br><br>
+	            <input type="password" id="password" name="password" value="" placeholder="Password..." minlength="8" maxlength="16"><br><br>
 	            <p id="badlogin">Incorrect username or password.</p>
 	            <input type="submit" value="Submit" class="submit">
 	            <input type="reset" value="Reset" class="reset">
