--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -13,8 +13,9 @@
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 	<script>
 		function populateFilters(){
-			addOptionsToFilter('city-options', filters[0], true);
-			addOptionsToFilter('major-options', filters[1], true);
+			addOptionsToFilter('city-options', filters[0], true, 1, false);
+			addOptionsToFilter('major-options', filters[1], true, 1, true);
+			addOptionsToFilter('new-major-options', filters[1], false, 0, true);
 			initDropDowns();
 		}
 	</script>
@@ -26,6 +27,10 @@
 			<div id="user">
 				<p>Ime Prezime</p>
 				<img src="../images/user-img.bmp" id="user-img">
+				<div id="user-options">
+					<button onclick="">Edit user</button>
+					<button onclick="">Log out</button>
+				</div>
 			</div>
 		</header>
 		<div id="content">
@@ -75,12 +80,14 @@
 						<div class="dropdown">
 							<input name="order_by" value="last_name-asc" readonly>
 							<div class="dd-options">
-								<option value="birthyear-asc">Datum rodjenja rastuci</option>
-								<option value="birthyear-des">Datum rodjenja opadajuci</option>
-								<option value="first_name-asc">Ime rastuce</option>
-								<option value="first_name-des">Ime opadajuce</option>
 								<option value="last_name-asc">Prezime rastuce</option>
 								<option value="last_name-des">Prezime opadajuce</option>
+								<option value="first_name-asc">Ime rastuce</option>
+								<option value="first_name-des">Ime opadajuce</option>
+								<option value="birthyear-asc">Datum rodjenja rastuci</option>
+								<option value="birthyear-des">Datum rodjenja opadajuci</option>
+								<option value="major-asc">Smer rastuci</option>
+								<option value="major-des">Smer opadajuci</option>
 							</div>
 						</div>
 					</div>
@@ -130,7 +137,12 @@
 					</div>
 
 					<div class="flex-row wide pad-light">
-						<label for="major_id">Smer:</label><input type="text" name="major_id">
+						<label for="major_id">Smer:</label>
+						<div class="dropdown no-auto-submit">
+							<input name="major_id" value="" readonly>
+							<div class="dd-options" id="new-major-options">
+							</div>
+						</div>
 					</div>
 				</form>
 				<div class="flex-row wide pad-medium">
