--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -55,7 +55,9 @@ header > * {
 }
 
 #user-img {
-	padding: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: -2px;
 	border-radius: 50%;
 	width: 40px;
 	height: 40px;
@@ -67,7 +69,7 @@ header > * {
 	right: 10px;
 	width: 170px;
 	height: 25px;
-	border-radius: 30px 30px 0px 0px;
+	/*border-radius: 30px 30px 0px 0px;*/
 
 	display: flex;
 	align-items: center;
@@ -76,6 +78,7 @@ header > * {
 
 #user:hover {
 	background-color: var(--color-darker);
+	outline: 1px solid var(--color-highlight);
 }
 
 #user-options {
@@ -88,7 +91,8 @@ header > * {
 	width: 200px;
 	z-index: 10;
 	background-color: var(--color-darker);
-	border-radius: 0 0 25px 25px;
+	/*border-radius: 0 0 25px 25px;*/
+	outline: 1px solid var(--color-highlight);
 	overflow: hidden;
 }
 
