--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -20,16 +20,16 @@
 		}
 	</script>
 </head>
-<body onload="getToken(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); loadDataToTable(); makeRequest('/get_student_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); loadDataToTable(); makeRequest('/get_student_filters','sendframe'); initGetFilters('sendframe');">
 	<div id="wrapper">
 		<header>
 			<h1><a href="admin" class="tokenify">Admin</a> / Studenti</h1>
 			<div id="user">
-				<p>Ime Prezime</p>
+				<p id="user-name">Ime Prezime</p>
 				<img src="../images/user-img.bmp" id="user-img">
 				<div id="user-options">
-					<button onclick="">Edit user</button>
-					<button onclick="">Log out</button>
+					<button onclick="toggleElementById('update-self');">Edit user</button>
+					<button onclick="makeRequest('/logout_req','sendframe'); window.location.replace('/');">Log out</button>
 				</div>
 			</div>
 		</header>
