--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -28,15 +28,15 @@
 				<p id="user-name">Ime Prezime</p>
 				<img src="../images/user-img.bmp" id="user-img">
 				<div id="user-options">
-					<button onclick="toggleElementById('update-self');">Edit user</button>
-					<button onclick="makeRequest('/logout_req','sendframe'); window.location.replace('/');">Log out</button>
+					<button type="button" onclick="toggleElementById('update-self');">Edit user</button>
+					<button type="button" onclick="makeRequest('/logout_req','sendframe'); window.location.replace('/');">Log out</button>
 				</div>
 			</div>
 		</header>
 		<div id="content">
 			<div id="content-header">
 				<form action="/get_students" id="search" method="get" target="dataframe">
-					<input type="text" id="searchbar" value="" placeholder="Search...">
+					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="search(this, 'data');">
 
 					<div class="form-element">
 						<label class="select-label">Datum rodjenja:</label>
@@ -76,24 +76,27 @@
 					</div>
 
 					<div class="form-element">
-						<label class="select-label" for="order_by">Redosled:</label>
+						<label class="select-label" for="order_by">Sortiraj po:</label>
 						<div class="dropdown">
-							<input name="order_by" value="last_name-asc" readonly>
+							<input name="order_by" value="index" readonly>
 							<div class="dd-options">
-								<option value="last_name-asc">Prezime rastuce</option>
-								<option value="last_name-des">Prezime opadajuce</option>
-								<option value="first_name-asc">Ime rastuce</option>
-								<option value="first_name-des">Ime opadajuce</option>
-								<option value="birthyear-asc">Datum rodjenja rastuci</option>
-								<option value="birthyear-des">Datum rodjenja opadajuci</option>
-								<option value="major-asc">Smer rastuci</option>
-								<option value="major-des">Smer opadajuci</option>
+								<option value="index">Br. Indeksa</option>
+								<option value="last_name">Prezime</option>
+								<option value="first_name">Ime</option>
+								<option value="birthyear">Datum</option>
+								<option value="city">Grad</option>
+								<option value="major">Smer</option>
 							</div>
 						</div>
 					</div>
 
+					<div class="form-element">
+						<label class="select-label">Rastuci poredak:</label>
+						<input type="checkbox" class="labeled" onchange="fillTable(this.checked);">
+					</div>
+
 					<div class="form-element end">
-						<button onclick="toggleElementById('new-element');" id="new-button">+</button>
+						<button  type="button" onclick="toggleElementById('new-element');" id="new-button">+</button>
 					</div>
 				</form>
 			</div>
@@ -153,7 +156,7 @@
 		</div>
 
 		<iframe src="" name="sendframe" id="sendframe"></iframe>
-		<iframe src="" name="dataframe" id="dataframe" onload="fillTable();"></iframe>
+		<iframe src="" name="dataframe" id="dataframe" onload="parseData();"></iframe>
 	</div>
 </body>
 </html>
