Added redirect error page.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -114,3 +114,9 @@ header > * {
 	background-color: var(--color-dark);
 	cursor: pointer;
 }
+
+.flex-center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
