Added initial exams page.

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,8 +17,9 @@
 				<ul>
 					<li><a href="students" class="tokenify">Students</a></li>
 					<li><a href="staff" class="tokenify">Staff</a></li>
-					<li><a href="courses" class="tokenify">Courses</a></li>
 					<li><a href="majors" class="tokenify">Majors</a></li>
+					<li><a href="courses" class="tokenify">Courses</a></li>
+					<li><a href="exams" class="tokenify">Exams</a></li>
 					<li><a href="users" class="tokenify">Users</a></li>
 				</ul>
 			</div>
