--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -13,14 +13,14 @@
 	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 	<script>
 		function populateFilters(){
-			addOptionsToFilter('subject-options', filters[0], true, 1, false);
+			addOptionsToFilter('lect-options', filters[0], true, 1, false);
 			addOptionsToFilter('major-options', filters[1], true, 1, true);
 			//addOptionsToFilter('new-major-options', filters[1], false, 0, true);
 			initDropDowns();
 		}
 	</script>
 </head>
-<body onload="getToken(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch(); makeRequest('/get_lecturer_filters','sendframe'); initGetFilters('sendframe');">
+<body onload="getToken(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToLinks(); submitSearch(); makeRequest('/get_subject_filters','sendframe'); initGetFilters('sendframe');">
 	<div id="wrapper">
 		<header>
 			<h1><a href="admin" class="tokenify">Admin</a> / Predmeti</h1>
@@ -38,21 +38,49 @@
 				<form action="/get_subjects" id="search" method="get" target="dataframe">
 					<input type="text" id="searchbar" value="" placeholder="Search..." onchange="search(this, 'data');">
 
-                                           @RequestParam("name") String name,
-                                           @RequestParam("year") String year,
+                      				   <!--
+                                           @RequestParam("year") String year,//
                                            @RequestParam("lect_name") String lect_name,
                                            @RequestParam("major_name") String major_name,
-                                           @RequestParam("order_by") int ord){
-
+                                           @RequestParam("order_by") int ord)-->
 
 					<div class="form-element">
-						<label class="select-label">Predmet:</label>
+						<label class="select-label">Godina:</label>
 	    				<div class="dropdown multiselect">
-							<input name="subject" value="all" readonly>
-							<div class="dd-options" id="subject-options">
+							<input name="year" value="1" readonly>
+							<div class="dd-options">
 								<div class="flex-row">
-									<label for="subject-options-0">All</label>
-									<input type="checkbox" id="subject-options-0" value="all" checked>
+									<label for="year-options-0">All</label>
+									<input type="checkbox" id="year-options-0" value="" checked>
+								</div>
+								<div class="flex-row">
+									<label for="year-options-1">Prva</label>
+									<input type="checkbox" id="year-options-1" value="1" checked>
+								</div>
+								<div class="flex-row">
+									<label for="year-options-2">Druga</label>
+									<input type="checkbox" id="year-options-2" value="2">
+								</div>
+								<div class="flex-row">
+									<label for="year-options-3">Treca</label>
+									<input type="checkbox" id="year-options-3" value="3">
+								</div>
+								<div class="flex-row">
+									<label for="year-options-4">Cetvrta</label>
+									<input type="checkbox" id="year-options-4" value="4">
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="form-element">
+						<label class="select-label">Predavac:</label>
+	    				<div class="dropdown multiselect">
+							<input name="lect_name" value="" readonly>
+							<div class="dd-options" id="lect-options">
+								<div class="flex-row">
+									<label for="lect-options-0">All</label>
+									<input type="checkbox" id="lect-options-0" value="all" checked>
 								</div>
 							</div>
 						</div>
@@ -61,7 +89,7 @@
 					<div class="form-element">
 						<label class="select-label">Smer:</label>
 	    				<div class="dropdown multiselect">
-							<input name="major" value="all" readonly>
+							<input name="major_name" value="" readonly>
 							<div class="dd-options" id="major-options">
 								<div class="flex-row">
 									<label for="major-options-0">All</label>
@@ -74,12 +102,14 @@
 					<div class="form-element">
 						<label class="select-label" for="order_by">Sortiraj po:</label>
 						<div class="dropdown">
-							<input name="order_by" value="index" readonly>
+							<input name="order_by" value="subj_id" readonly>
 							<div class="dd-options">
-								<option value="lect_id">ID</option>
-								<option value="last_name">Prezime</option>
-								<option value="first_name">Ime</option>
-								<option value="title">Zvanje</option>
+								<option value="subj_id">ID</option>
+								<option value="subj_name">Ime</option>
+								<option value="year">Godina</option>
+								<option value="espb">ESPB</option>
+								<option value="major_name">Smer</option>
+								<option value="lect_id">Predavac</option>
 							</div>
 						</div>
 					</div>
